# calllogger

./: .coveragerc  .deepsource.toml  .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile.template  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  compose.yaml  docker-compose.tpl  docker-compose.yml  entrypoint.sh  glaonna-call-logger.service  makefile  mockcalls.py  pyproject.toml  quartx-call-logger.service  requirements-dev.txt  requirements-docker.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py  testcalls.py  tox.ini
.github/: dependabot.yml
.github/workflows/: backup.yml  build-test.yml  ci-test-build-push.yml  ci.yml  cleanup.yml  docker.yml  dockerimage.yml  mender.yml  python-tests.yml  snyk-infrastructure-analysis.yml  test.yml
call_logger/: __init__.py  __main__.py  api.py  apps.py  config.py  monitors.py  record.py  reporter.py
call_logger/data/: base-settings.ini  default.yml
call_logger/management/commands/: calllogger.py
call_logger/plugins/: __init__.py  mockcalls.py  siemens_hipath_serial.py  siemens_hps.py
calllogger/: __init__.py  __main__.py  conf.py  plugins.py  record.py  utils.py
calllogger/api/: cdr.py
calllogger/misc/: mockcalls.py  testcalls.py
calllogger/plugins/: __init__.py  mockcalls.py  testcalls.py
calllogger/services/: auth.py  cdr.py
data/: 99-serial.rules  call-logger.yml  entrypoint.sh  quartx-call-logger.service
docs/: README.md  conf.py  index.rst  plugins.rst
quartx_call_logger/: __init__.py  __main__.py  api.py  config.py  record.py  settings.py
quartx_call_logger/plugins/: __init__.py  siemens_hipath_serial.py
src/calllogger/: __init__.py  __main__.py  auth.py  conf.py  datastore.py  exceptions.py  influx.py  managers.py  metrics.py  misc.py  record.py  secrets.py  utils.py
src/calllogger/api/: __init__.py  cdr.py  device.py  handlers.py  influx.py  info.py  session.py
src/calllogger/influx/: __init__.py  influx.py  instruments.py  point.py
src/calllogger/metrics/: __init__.py  collectors.py  point.py
src/calllogger/plugins/: __init__.py  base.py  mockcalls.py  serial.py
src/calllogger/plugins/internal/: beronet.py  mockcalls.py  siemens_serial.py
src/calllogger/telemetry/: __init__.py  collectors.py  instruments.py  logs.py  point.py
test/: __init__.py  api.py  test_cdr.py  test_record.py  test_utils.py
tests/: __init__.py  common.py  conftest.py  test_api.py  test_cdr.py  test_conf.py  test_config.py  test_datastore.py  test_entrypoint.py  test_main.py  test_managers.py  test_misc.py  test_monitor.py  test_plugin.py  test_plugin_base.py  test_plugin_mock.py  test_plugin_serial.py  test_plugin_siemens_serial.py  test_record.py  test_serial.py  test_settings.py  test_utils.py
tests/api/: test_cdr.py  test_device.py  test_handlers.py  test_influx.py  test_info.py
tests/influx/: test_instruments.py  test_point.py
tests/plugins/: test_plugin_base.py  test_plugin_beronet.py  test_plugin_mock.py  test_plugin_serial.py  test_plugin_siemens_serial.py
tests/telemetry/: test_instruments.py  test_logs.py  test_point.py
