[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quartx-calllogger"
version = "0.4.0"
description = "CDR(Call Data Record) logger that sends call logs to the Quartx Call Monitoring service for processing."
license = "GPL-2.0-only"
authors = ["William Forde <willforde@quartx.ie>"]
readme = "README.md"
homepage = "https://quartx.ie"
repository = "https://github.com/quartx-analytics/calllogger"
documentation = ""
keywords = ["phone", "telephone", "cdr", "telecommunications"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Environment :: No Input/Output (Daemon)",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Telephony",
    "Topic :: Communications :: Internet Phone",
]
packages = [
    { include = "calllogger", from = "src" },
]

[tool.poetry.scripts]
calllogger = "calllogger.__main__:monitor"
calllogger-mock = "calllogger.__main__:mockcalls"
calllogger-getid = "calllogger.__main__:getid"

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.4"
sentry-sdk = "^1.1.0"
pyserial = "^3.5"
requests = "^2.25.1"
attrs = "^21.2.0"
appdirs = "^1.4.4"
getmac = "^0.8.2"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
pytest = "^6.2.4"
flake8 = "^3.9.0"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"
tox-poetry-installer = "^0.8.0"
