[tool.poetry]
name = "quartx-calllogger"
version = "1.0.0"
description = "CDR(Call Data Record) logger that sends call logs to the Quartx Call Monitoring service for processing."
license = "GPL-2.0-only"
authors = ["William Forde <willforde@quartx.ie>"]
readme = "README.md"
homepage = "https://quartx.ie"
repository = "https://github.com/quartx-analytics/calllogger"
documentation = ""
keywords = ["phone", "telephone", "cdr", "telecommunications"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Environment :: No Input/Output (Daemon)",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Telephony",
    "Topic :: Communications :: Internet Phone",
]
packages = [
    { include = "calllogger", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.5"
sentry-sdk = "^1.9.7"
pyserial = "^3.5"
requests = "^2.26.0"
attrs = "^21.4.0"
appdirs = "^1.4.4"
getmac = "^0.8.3"
fluent-logger = "^0.10.0"
psutil = "^5.9.0"
uptime = "^3.0.1"
logzio-python-handler = "^3.0.0"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"
pytest = "^7"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"
tox-poetry-installer = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calllogger = "calllogger.__main__:monitor"
calllogger-mock = "calllogger.__main__:mockcalls"
calllogger-getmac = "calllogger.__main__:getmac"
