[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "quartx-calllogger"
dynamic = ["version"]
description = "CDR(Call Data Record) logger that sends call logs to the Quartx Call Monitoring service for processing."
readme = "README.md"
requires-python = ">=3.10.0"
license = {file = "LICENSE"}
authors = [
  { name = "William Forde", email = "willforde@quartx.ie" },
]
keywords = [
  "cdr",
  "phone",
  "telephone",
  "telecommunications"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Environment :: No Input/Output (Daemon)",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Telephony",
  "Topic :: Communications :: Internet Phone",
]
dependencies = [
    "appdirs~=1.4",
    "psutil~=5.9",
    "uptime~=3.0",
    "python-decouple~=3.8",
    "sentry-sdk~=1.17",
    "pyserial~=3.5",
    "requests~=2.28",
    "attrs~=22.2",
    "getmac~=0.9",
    "fluent-logger~=0.10",
    "logzio-python-handler~=4.0",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest~=7.2",
    "pytest-cov~=4.0",
    "pytest-mock~=3.10",
    "requests-mock~=1.10",
]
lint = [
    "flake8~=6.0",
    "Flake8-pyproject~=1.2",
]

[project.urls]
homepage = "https://quartx.ie"
repository = "https://github.com/quartx-analytics/calllogger"

[project.scripts]
calllogger = "calllogger.__main__:monitor"
calllogger-mock = "calllogger.__main__:mockcalls"
calllogger-getmac = "calllogger.__main__:getmac"

[tool.pdm.scripts]
_.env_file = ".env"
tests = "pytest"
linting = "flake8 src/calllogger"
checks = {composite = ["linting", "tests"]}
post_lock = {composite = [
    "pdm export -o requirements-docker.txt --without-hashes --prod",
    "pdm export -o requirements-test.txt --without-hashes --dev --group test",
]}

[tool.pdm.build]
package-dir = "src"
excludes = ["tests"]

[tool.pdm.version]
source = "file"
path = "src/calllogger/__init__.py"

[tool.flake8]
max-line-length = 120
ignore = ["E402"]
exclude = [
    ".git",
    "test",
]

[tool.coverage.run]
source = ["calllogger"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover",
  "def __repr__",
]

[tool.coverage.paths]
source = [
  "src",
  "*/site-packages",
]
