[metadata]
name = quartx-call-logger
version = 0.4.0
author = William Forde
author_email = willforde@quartx.ie
description = Call logger component for the QuartX phone system monitoring frontend.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-2.0-only
license_file = LICENSE
url = https://quartx.ie/
project_urls =
    Documentation = https://quartx-call-logger.readthedocs.io/en/stable/
    Source = https://github.com/quartx-software/quartx-call-logger/
    Tracker = https://github.com/quartx-software/quartx-call-logger/issues/
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English
    Intended Audience :: System Administrators
    Development Status :: 5 - Production/Stable
    Environment :: No Input/Output (Daemon)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Communications :: Telephony
    Topic :: Communications :: Internet Phone
    Typing :: Typed
keywords =
    python
    phone
    telephone
    cdr

[options]
python_requires = >=3.9
packages = calllogger
include_package_data = true
zip_safe = false
install_requires =
    python-decouple
    sentry-sdk
    pyserial
    requests

[options.entry_points]
console_scripts =
    calllogger = calllogger

[options.extras_require]
dev =
    pytest
    pytest-cov

[flake8]
max-line-length = 120
ignore =
    E402
exclude =
    .git,
    docs,
    test

[coverage:run]
source=calllogger
branch=True
relative_files=True

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:
    pragma: no cover
